[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/NodeDegreeSizeModeWindowPopup.gd" type="Script" id=1]

[node name="NodeDegreeSizeModeWindowPopup" type="WindowDialog"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -196.5
margin_top = -250.0
margin_right = 196.5
margin_bottom = 250.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 368.0
margin_bottom = 475.0
mouse_filter = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 343.0
margin_bottom = 28.0
mouse_filter = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 336.0
margin_bottom = 21.0
text = "Assign or change colors of Partition IDs."
align = 1
valign = 1

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 343.0
margin_bottom = 66.0
custom_constants/margin_top = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer4"]
margin_top = 10.0
margin_right = 343.0
margin_bottom = 34.0
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer4/HBoxContainer"]
margin_left = 77.0
margin_top = 5.0
margin_right = 187.0
margin_bottom = 19.0
text = "Max Degree Size:"

[node name="SpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/MarginContainer4/HBoxContainer"]
margin_left = 191.0
margin_right = 265.0
margin_bottom = 24.0
min_value = 5.0
max_value = 200.0
value = 5.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 343.0
margin_bottom = 272.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_top = 25

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
margin_top = 25.0
margin_right = 343.0
margin_bottom = 202.0
mouse_filter = 2

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/MarginContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 336.0
margin_bottom = 170.0
mouse_filter = 2
custom_constants/hseparation = 50
columns = 3

[node name="Partition ID" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/PanelContainer/GridContainer"]
margin_top = 5.0
margin_right = 46.0
margin_bottom = 19.0
text = "Degree"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/PanelContainer/GridContainer"]
margin_left = 96.0
margin_right = 208.0
margin_bottom = 24.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="Color" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/PanelContainer/GridContainer/HBoxContainer2"]
margin_top = 5.0
margin_right = 26.0
margin_bottom = 19.0
text = "Size"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/PanelContainer/GridContainer"]
margin_left = 258.0
margin_right = 329.0
margin_bottom = 24.0
mouse_filter = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/PanelContainer/GridContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 43.0
margin_bottom = 19.0
text = "Visible"

[node name="CheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/MarginContainer/PanelContainer/GridContainer/HBoxContainer"]
margin_left = 47.0
margin_right = 71.0
margin_bottom = 24.0
pressed = true

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 336.0
margin_bottom = 170.0
mouse_filter = 2
custom_constants/margin_top = 25

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/MarginContainer/PanelContainer/MarginContainer"]
margin_top = 25.0
margin_right = 329.0
margin_bottom = 163.0
mouse_filter = 2

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/MarginContainer/PanelContainer/MarginContainer/ScrollContainer"]
margin_right = 329.0
mouse_filter = 2
size_flags_horizontal = 3
columns = 4

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 276.0
margin_right = 343.0
margin_bottom = 346.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="LinearSizingButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer3"]
margin_left = 10.0
margin_top = 10.0
margin_right = 333.0
margin_bottom = 60.0
rect_min_size = Vector2( 323, 50 )
text = "Linear Sizing"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 350.0
margin_right = 343.0
margin_bottom = 450.0
custom_constants/margin_right = 10
custom_constants/margin_top = 30
custom_constants/margin_left = 10
custom_constants/margin_bottom = 30

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2"]
margin_left = 10.0
margin_top = 30.0
margin_right = 333.0
margin_bottom = 70.0
rect_min_size = Vector2( 323, 40 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ApplyButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer2"]
margin_right = 159.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Apply"

[node name="DontApplyButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer2"]
margin_left = 163.0
margin_right = 323.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Don't Apply"

[connection signal="value_changed" from="MarginContainer/VBoxContainer/MarginContainer4/HBoxContainer/SpinBox" to="." method="_on_SpinBox_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer3/LinearSizingButton" to="." method="_on_LinearSizingButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer2/ApplyButton" to="." method="_on_ApplyButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer2/DontApplyButton" to="." method="_on_DontApplyButton_pressed"]
